--- a/homepage.html
+++ b/homepage.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="townhall.css">
 	</head>
 		<body>
-		<img id ="TownHall" src="images/town_hall_logo.gif" alt="Town Hall Logo">
+		<img id ="TownHall" src="https://webpages.charlotte.edu/kcardoso/Labs/Lab5/town_hall/images/town_hall_logo.gif" alt="Town Hall Logo">
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our 75th Year</h3>
 		<h2>Our Mission</h2>
@@ -24,7 +24,7 @@
 				
 				<h3>October<br><a href="file:///C:/Users/danny/AppData/Local/Temp/ec65612d-48b7-4215-9cae-71a27c91372f_A05.zip.72f/A05/A05/speakers/brancaccio.html">David Brancaccio</a></h3>
 				
-				<img id="Dave" src="images/Dave.avif" alt="David Brancaccio">
+				<img id="Dave" src="https://aspenideasfestival.imgix.net/d50242b5-2874-48f3-b253-7e4f6c708e03/Brancaccio_David_AIF2018_0.jpg?auto=compress%2Cformat&fit=min&fm=jpg&q=80&rect=0%2C0%2C1000%2C1000" alt="David Brancaccio">
 			</body>
 				<main>
 					</main>
